--- a/react-app/src/Components/home.css
+++ b/react-app/src/Components/home.css
@@ -11,7 +11,7 @@ body{
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: #ffffff94;
+    background: #ffffff;
 }
 
 section{
